test/expected/explain_vovyf-c.out
explain virtual void f() override final
        ^
9: error: "virtual": unsupported keyword in C
